<resources>
    <string name="app_name">Inventory App</string>
    <string name="emptyview_text">Please click on the add button below,\nto add a new product to the inventory.</string>
    <string name="sale_btn_text">Sale</string>
    <string name="product_text">Product</string>
    <string name="price_text">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="product_name_label">Product Name :</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_details_label">Product Details :</string>
    <string name="product_price_label">Product Price :</string>
    <string name="product_price_hint">Product Price</string>
    <string name="product_quantity_label">Product Quantity :</string>
    <string name="supplier_details_label">Supplier Details :</string>
    <string name="supplier_name_label">Supplier Name :</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_phone_label">Supplier Phone :</string>
    <string name="supplier_phone_hint">Supplier Phone</string>
    <string name="contact_supplier_btn_text">Contact Supplier</string>
    <string name="delete_this_product_btn_text">Delete This Product</string>
    <string name="dollar_sign_label">$</string>
    <string name="plus_sign_label">+</string>
    <string name="minus_sign_label">-</string>
    <string name="default_quantity_hint">0</string>
    <string name="product_quantity_updated_msg">Product quantity updated</string>
    <string name="product_quantity_not_updated_msg">Product quantity can not be less than zero</string>
    <string name="add_product_activity_title">Add Product</string>
    <string name="edit_product_activity_title">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="discard_changes_alert_msg">Discard changes ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_product_alert_msg">Delete this product ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_deletion_confirm_msg">Product Deleted</string>
    <string name="product_deletion_err_msg">Product couldn\'t be deleted</string>
    <string name="product_saved_msg">Product Saved</string>
    <string name="product_save_err_msg">Product couldn\'t be saved</string>
    <string name="product_update_msg">Product Updated</string>
    <string name="product_update_err_msg">Product couldn\'t be updated</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="product_deleted_confirm_msg">All products deleted</string>
    <string name="product_delete_err_msg">All products couldn\'t be deleted</string>
    <string name="delete_all_products_confirm_msg">Delete all products from the list ?</string>
    <string name="product_list_label">Products</string>
    <string name="valid_value_err_msg">Please enter valid / non-null values to save a product</string>
</resources>
